src/components/Editors/editors/Response/Response.module.scss
@import '../node_modules/bootstrap/scss/functions';
@import '../node_modules/bootstrap/scss/variables';
@import '../node_modules/bootstrap/scss/mixins';

.responseEditor {
  width: 100%;
  height: 100%;
}

.loaderWrapper {
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  background-color: white;
  z-index: 3;
  .loader {
    margin: auto;
    top: calc(50% - 60px);
  }
}
.responseCode {
  height: 100%;
  font-size: 16px;
  background-color: #f5f5f5;
  font-family: 'Fira Code', monospace;
  padding: 15px;
  border-radius: 10px;
  overflow: auto !important;
}

@include media-breakpoint-down(lg) {
  .responseCode {
    height: 60vh;
  }
}

